--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -37,8 +37,7 @@
         </div>
       </div>
       <div class="promo-code mt-6">
-        <input type="text" placeholder="Please enter promo code" [(ngModel)]="promoCode"
-               class="border p-2 w-full rounded mb-4">
+        <input type="text" placeholder="Please enter promo code" [(ngModel)]="promoCode" class="border p-2 w-full rounded mb-4">
       </div>
       <div class="flex flex-col items-center space-y-4">
         <button (click)="applyDiscount()" [disabled]="isDiscountApplied" class="w-1/3 bg-gray-400 text-gray-100 px-2 py-1 rounded hover:bg-gray-400">Apply Discount</button>
