--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -70,7 +70,9 @@
           <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
             <div></div>
             <div>
-              <a routerLink="/payment" class="w-1/3 bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Proceed to payment</a>
+              <button type="submit" class="w-full bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">
+                Proceed to payment
+              </button>
             </div>
             <div></div>
           </div>
