Integration with payu payment service

--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -43,7 +43,7 @@
         </div>
         <div class="grid grid-cols-1 mb-6">
           <div class="flex justify-center">
-            <a routerLink="/payment" class="bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Proceed to payment</a>
+            <button (click)="proceedToPayment()" class="bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Proceed to payment</button>
           </div>
         </div>
       </div>
