I*mplementation of a galleryComponent

--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -34,7 +34,7 @@
           </div>
         </li>
         <li>
-          <a class="nav-link text-gray-700 hover:text-gray-900 text-2xl" routerLink="/gallery">Gallery</a>
+          <a href="/shop" class="nav-link text-gray-700 hover:text-gray-900 text-2xl" routerLink="/gallery">Gallery</a>
         </li>
         <li class="relative flex items-center">
           <a class="nav-link text-gray-700 hover:text-gray-900 text-2xl" routerLink="/cart">Cart</a>
