implementation of a contact component

--- a/src/app/components/info/contact/contact.component.html
+++ b/src/app/components/info/contact/contact.component.html
@@ -1,1 +1,17 @@
-<p>contact works!</p>
+<div class="flex items-center justify-center pt-12">
+  <div class="max-w-5xl p-6 bg-white shadow-lg text-left">
+    <div class="flex flex-col lg:flex-row lg:items-start mb-6">
+      <img src="assets/bio_face.png" alt="Kamila Białkowska-Ismaił" class="lg:mr-6 mb-4 lg:mb-0 lg:self-start">
+    </div>
+    <div>
+      <h1 class="text-4xl font-bold text-gray-900 mb-4 py-4">Contact</h1>
+      <ul class="list-disc pl-5 text-lg text-gray-700 mb-6">
+        <li class="mb-2">ul. Matejki 7 m.14</li>
+        <li class="mb-2">05-400 Otwock, Polska</li>
+        <li class="mb-2">tel.: +48 22 719 77 11</li>
+        <li class="mb-2">tel. kom.: +48 600 855 431</li>
+        <li class="mb-2">e-mail: dsk.bis&#64;wp.pl</li>
+      </ul>
+    </div>
+  </div>
+</div>
