Added picture to a component

--- a/src/app/components/thankyou/thankyou.component.html
+++ b/src/app/components/thankyou/thankyou.component.html
@@ -1,10 +1,10 @@
 <div class="thankyou-page container mx-auto p-4 text-center min-h-screen flex flex-col items-center justify-center bg-gray-100">
-<!--  <img src="assets/thank_you.png" alt="Thank You" class="w-32 h-32 mb-4">-->
+  <img src="assets/thankyou.png" alt="Thank You" class="w-128 h-90 mb-4">
   <h1 class="text-4xl font-bold text-gray-800 mb-4">Thank You for Your Purchase!</h1>
   <p class="text-lg text-gray-600 mb-8">
     Your order has been placed successfully. We appreciate your business and hope you enjoy your new artwork.
   </p>
-  <div class="text-center">
-    <a routerLink="/" class="w-full bg-gray-600 text-gray-100 py-2 px-3 hover:bg-gray-500 text-center rounded">Back to Home</a>
+  <div>
+    <a href="" class="w-full block bg-gray-500 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Back to cart</a>
   </div>
 </div>
