Removed unnecessary socials from footer and added correct link for instagram

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,13 +7,7 @@
       <a routerLink="/returns" class="text-white hover:text-gray-400">Returns</a>
     </div>
     <div class="flex justify-center space-x-6 mb-4">
-      <a href="https://facebook.com" target="_blank" class="text-white hover:text-gray-400">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://twitter.com" target="_blank" class="text-white hover:text-gray-400">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://instagram.com" target="_blank" class="text-white hover:text-gray-400">
+      <a href="https://www.instagram.com/kamila_bialkowskaismail/" target="_blank" class="text-white hover:text-gray-400">
         <i class="fab fa-instagram"></i>
       </a>
     </div>
