--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-gray-600 text-white p-8">
   <div class="container mx-auto text-center">
-    <h2 class="text-lg font-bold mb-4">artShop</h2>
+    <h2 class="text-lg font-bold mb-4">© Kamila Białkowska-Ismaił</h2>
     <div class="flex justify-center space-x-6 mb-4">
       <a routerLink="/terms" class="text-white hover:text-gray-400">Terms</a>
       <a routerLink="/payment-shipping" class="text-white hover:text-gray-400">Payments</a>
@@ -11,6 +11,6 @@
         <i class="fab fa-instagram"></i>
       </a>
     </div>
-    <p class="text-sm">&copy; 2024 artShop | All rights reserved</p>
+    <p class="text-sm">&copy; 2024 Kamila Białkowska-Ismaił | All rights reserved</p>
   </div>
 </footer>
