Changed size of an instagram icon in the additional-elements.component

--- a/src/app/components/header/additional-elements/additional-elements.component.html
+++ b/src/app/components/header/additional-elements/additional-elements.component.html
@@ -1,5 +1,5 @@
 <div class="additional-elements d-flex justify-content-center align-items-center">
-  <a href="https://www.instagram.com/kamila_bialkowskaismail/" target="_blank" class="social-icon">
+  <a href="https://www.instagram.com/kamila_bialkowskaismail/" target="_blank" class="text-xl p-1 m-1 text-black hover:text-gray-600">
     <i class="fab fa-instagram"></i>
   </a>
   <span class="pipe mx-2">|</span>
