--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -60,7 +60,7 @@
 
           </div>
           <div class="col-span-1">
-            <button (click)="proceedToPayment()" class="w-full bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Pay with payU</button>
+            <button (click)="proceedToPayment()" class="w-full bg-red-600 text-white py-1 px-3 hover:bg-red-700 text-center rounded">Pay with payU</button>
           </div>
         </div>
       </div>
