--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen flex flex-col">
-  <header>
+  <header *ngIf="showHeader">
     <app-header></app-header>
   </header>
   <main class="flex-grow">
