--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <main class="flex-grow">
     <router-outlet></router-outlet>
   </main>
-  <footer class="mt-auto">
+  <footer *ngIf="showFooter" class="mt-auto">
     <app-footer></app-footer>
   </footer>
 </div>
