--- a/src/app/components/admin-panel/orders/order-detail/order-detail.component.html
+++ b/src/app/components/admin-panel/orders/order-detail/order-detail.component.html
@@ -1,32 +1,57 @@
-<div *ngIf="order" class="w-full p-6 bg-white text-black shadow-lg rounded-lg">
+<div class="w-full p-6 bg-white text-black shadow-lg rounded-lg">
   <h2 class="text-2xl font-bold mb-4">Order Details</h2>
   <div class="border-t border-gray-200 pt-4">
     <div class="mb-4">
       <h3 class="font-semibold">Order Items</h3>
       <ul>
-        <li *ngFor="let item of order.items" class="flex justify-between">
-          <span>{{ item.name }} x {{ item.quantity }}</span>
-          <span>${{ item.unitPrice }}</span>
+        <li *ngFor="let order of order.paintings" class="flex justify-between">
+          <span>{{ order.description }} x 1</span>
         </li>
       </ul>
     </div>
     <div class="border-t border-gray-200 pt-4">
       <div class="flex justify-between mb-4">
         <span>Subtotal</span>
-        <span>${{ order.subtotal }}</span>
+        <span>{{ order.totalAmount }}</span>
       </div>
       <div class="flex justify-between mb-4">
         <span>Shipping</span>
-        <span>${{ order.shipping }}</span>
+        <span>{{ order.shipping || '0' }}</span>>
       </div>
       <div class="flex justify-between mb-4">
         <span>Tax</span>
-        <span>${{ order.tax }}</span>
+        <span>{{ order.tax || '0' }}</span>
       </div>
       <div class="flex justify-between font-semibold">
         <span>Total</span>
-        <span>${{ order.totalAmount }}</span>
+        <span>{{ order.totalAmount }}</span>
       </div>
     </div>
   </div>
+  <div class="border-t border-gray-200 pt-4">
+    <div class="flex justify-between mb-4">
+      <h3 class="font-semibold">Shipping Information</h3>
+      <address class="not-italic">
+        <span>{{ order.customer.firstName }} {{ order.customer.lastName }}</span><br>
+        <span>{{ order.shippingAddress.address }}</span><br> <!-- Updated to use ShippingAddress -->
+        <span>{{ order.shippingAddress.city }}, {{ order.shippingAddress.state }} {{ order.shippingAddress.zip }}</span>
+      </address>
+    </div>
+  </div>
+  <div class="border-t border-gray-200 pt-4">
+    <div class="flex justify-between mb-4">
+      <h3 class="font-semibold">Customer Information</h3>
+      <dl>
+        <dt>Customer</dt>
+        <dd>{{ order.customer.firstName }} {{ order.customer.lastName }}</dd>
+        <dt>Email</dt>
+        <dd>{{ order.customer.email }}</dd>
+        <dt>Phone</dt>
+        <dd>{{ order.customer.phone || 'N/A' }}</dd>
+      </dl>
+    </div>
+  </div>
+</div>
+<div *ngIf="!order" class="w-full p-6 bg-white text-black shadow-lg rounded-lg">
+  <h2 class="text-2xl font-bold mb-4">No Order Selected</h2>
 </div>
