--- a/src/app/components/admin-panel/products/product-list/admin-product-list.component.html
+++ b/src/app/components/admin-panel/products/product-list/admin-product-list.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center justify-center w-full bg-white">
   <div class="w-full p-6 bg-white text-black shadow-lg rounded-lg">
     <h1 class="text-4xl font-bold text-black mb-4">Produkty</h1>
-    <div class="flex justify-end">
+    <div class="flex justify-end mb-4">
       <button type="button" (click)="openModal()" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Dodaj nowy produkt
       </button>
