--- a/src/app/components/admin-panel/products/products.component.html
+++ b/src/app/components/admin-panel/products/products.component.html
@@ -3,6 +3,11 @@
   <div class="flex flex-1 px-20">
     <div class="w-2/3">
       <app-admin-product-list (productSelected)="onProductSelected($event)"></app-admin-product-list>
+      <app-add-product-modal
+        [isOpen]="isAddProductModalOpen"
+        (productAdded)="handleProductAdded($event)"
+        (close)="isAddProductModalOpen = false">
+      </app-add-product-modal>
     </div>
     <div class="w-1/3 pl-6">
       <app-admin-product-details [product]="selectedProduct"></app-admin-product-details>
