--- a/src/app/components/admin-panel/products/product-list/admin-product-list.component.html
+++ b/src/app/components/admin-panel/products/product-list/admin-product-list.component.html
@@ -2,7 +2,7 @@
   <div class="w-full p-6 bg-white text-black shadow-lg rounded-lg">
     <h1 class="text-4xl font-bold text-black mb-4">Produkty</h1>
     <div class="flex justify-end mb-4">
-      <button type="button" (click)="openModal()" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+      <button type="button" (click)="addNewProduct()" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Dodaj nowy produkt
       </button>
     </div>
