--- a/src/app/components/admin-panel/products/products.component.html
+++ b/src/app/components/admin-panel/products/products.component.html
@@ -6,9 +6,8 @@
         (productSelected)="onProductSelected($event)"
         (addProduct)="openAddProductModal()"></app-admin-product-list>
       <app-add-product-modal
-        [isOpen]="isAddProductModalOpen"
         (productAdded)="handleProductAdded($event)"
-        (close)="isAddProductModalOpen = false">
+        (close)="addProductModal.close()">
       </app-add-product-modal>
     </div>
     <div class="w-1/3 pl-6">
