--- a/src/app/components/admin-panel/products/add-product-modal/add-product-modal.component.html
+++ b/src/app/components/admin-panel/products/add-product-modal/add-product-modal.component.html
@@ -27,6 +27,10 @@
         <label for="image" class="block text-sm font-medium text-gray-700">Zdjęcie</label>
         <input id="image" type="file" (change)="onImageChange($event)" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" />
       </div>
+      <div class="mb-4">
+        <label for="additionalImages" class="block text-sm font-medium text-gray-700">Dodatkowe Zdjęcia</label>
+        <input id="additionalImages" type="file" multiple (change)="onAdditionalImagesChange($event)" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" />
+      </div>
       <div class="flex justify-end">
         <button type="button" (click)="close()" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mr-2">Anuluj</button>
         <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" [disabled]="productForm.invalid">Dodaj</button>
